# khalorg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.org  CONTRIBUTING.md  LICENSE_OVERRIDE_FILE.yml  README.md  README.org  THIRDPARTYLICENSES  khal2org.bash  khal_to_org  khalorg  main.py  org2khal  org_to_khal  paths.py  publish  pyproject.toml  requirements.txt  setup.py  test_org_to_khal.py
.github/workflows/: pypi.yml  pytest.yml  release.yml  test.yml  thirdpartylicenses.yml
demo/: meeting.org
extras/: calsync  davmail.properties  davmail.service  publish
src/: cli.py  commands.py  hacks.py  helpers.py  interfaces.py  khal_interface.py  khal_items.py  org_items.py  org_to_khal  org_to_khal.py  post_processors.py  rrule.py  tools.py
src/khal/: args.py  calendar.py  checker.py  helpers.py
src/khalorg/: __init__.py  __main__.py  cli.py  commands.py  helpers.py  logger.py  paths.py
src/khalorg/khal/: args.py  calendar.py  checker.py  helpers.py
src/khalorg/org/: agenda_items.py  helpers.py
src/khalorg/static/: description_delete_command.txt  description_edit_command.txt  description_list_command.txt  description_new_command.txt  description_sync_command.txt
src/org/: agenda_items.py  helpers.py
src/static/: config.ini  description_list_command.txt  epilog.txt  khal_format.txt  khalorg_format.txt  org_format.txt
src/test/: helpers.py  khalorg_tester  test_cli.py  test_commands.py  test_helpers.py
src/test/static/: test_config_combined.ini
src/test/test_khal/: helpers.py  test_args.py  test_calendar.py  test_checker.py
src/test/test_org/: test_agenda_items.py
test/: agenda_items.py  helpers.py  khalorg_cli_tester  khalorg_tester  org2khal_CLI_tester  org2khal_tester  test_cli.py  test_commands.py  test_hacks.py  test_helpers.py  test_khal_interface.py  test_khal_items.py  test_org_items.py  test_org_to_khal.py  test_org_to_khal_parser  test_post_processors.py  test_rrule.py  test_tools.py
test/static/: agenda_items.py  config_template.txt  khalorg_format_full.txt  test_config  test_config_user.ini  valid.org
test/static/agenda_items/: all_day.org  all_day_until_with_time.org  body_first.org  demo.org  duplicate.org  duplicate_recurring.org  khal_list_recurring.org  khal_list_recurring_allday.org  khal_list_recurring_and_non_recurring.org  khal_list_recurring_not_supported.org  maximal_valid.org  minimal_valid.org  multiple_timestamps.org  multiple_timestamps_unsorted.org  no_duplicates.org  no_heading.org  no_time_stamp.org  not_first_child.org  not_first_heading.org  not_first_level.org  past.org  recurring.org  recurring_allday.org  recurring_allday_weekly.org  recurring_and_non_recurring.org  recurring_first_item_moved.org  recurring_first_item_moved_expected.org  recurring_monthly.org  recurring_not_supported.org  repeat_pattern_allday_weekly.org  repeat_pattern_monthly.org  repeat_pattern_not_supported.org  repeat_pattern_not_supported_2.org  repeat_pattern_weekly.org  repeat_pattern_weekly_1TH.org  repeat_pattern_weekly_no_end.org  rrule_recurring.org  rrule_recurring_1th.org  (+12 more)
test/test_khal/: helpers.py  test_args.py  test_calendar.py  test_checker.py
test/test_org/: test_agenda_items.py  test_helpers.py
tests/: agenda_items.py  helpers.py  khalorg_cli_tester  khalorg_tester  test_cli.py  test_commands.py  test_helpers.py  test_rrule.py
tests/static/: config_template.txt  test_config_default.ini
tests/test_khal/: helpers.py  test_args.py  test_calendar.py  test_checker.py
tests/test_org/: test_agenda_items.py  test_helpers.py
(+10 files in other folders)
