[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "khalorg"
authors = [ {name = "BartSte"} ]
description = "An interface between Org mode and Khal cli calendar."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["khal", "org mode", "vdirsyncer", "CalDav", "agenda", "emacs", "neovim", "orgmode-nvim"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "khal>=0.11",
    "vdirsyncer",
    "orgparse"
]
version = "0.0.0b4"

[project.optional-dependencies]
debug = ["ipdb", "ipython"]
test = ["pytest"]
build = ["build", "twine"]

[project.scripts]
khalorg = "khalorg:main"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["khalorg"]  # package names should match these glob patterns (["*"] by default)

[tool.pyright]
include = ["khalorg", "tests"]
exclude = [
    "**/__pycache__",
    ".git",
    ".pytest_cache",
    "extras",
]
ignore = []
defineConstant = {}
stubPath = "stubs"
venvPath = ".venv"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

executionEnvironments = []

[tool.ruff]
line-length = 79

select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # PEP8 naming
    "D",  # pydocstyle
]

ignore = ["D212", "D205", "D210", "D203"]

[tool.autopep8]
max_line_length = 79
aggressive = 3
experimental = true

[tool.pytest.ini_options]
addopts = "-s -rA --log-level INFO"
pythonpath = [
  "src"
]
testpaths = [
    "tests"
]

[tool.ipdb]
context = 9
